[gd_scene load_steps=15 format=2]

[ext_resource path="res://Theme/MyTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Autoload/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Props/MenuShip/MenuShip.png" type="Texture" id=3]
[ext_resource path="res://Props/MenuTitle/MenuTitleAsteroid.png" type="Texture" id=4]
[ext_resource path="res://Props/MenuTitle/MenuTitleAvoid.png" type="Texture" id=5]
[ext_resource path="res://Props/MenuTitle/MenuTitleAvoidBlur.png" type="Texture" id=6]
[ext_resource path="res://Props/MenuTitle/MenuTitleAsteroidBlur.png" type="Texture" id=7]
[ext_resource path="res://Sounds/FlyAway.wav" type="AudioStream" id=8]
[ext_resource path="res://Props/Explosion/ExplosionParticle.png" type="Texture" id=9]
[ext_resource path="res://Theme/Fonts/Visitor_Tiny.tres" type="DynamicFont" id=10]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.272727 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.484935 )
colors = PoolColorArray( 0.730469, 0.0865827, 0.0199738, 1, 0.84375, 0.741886, 0.276855, 1 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MenuShipRoot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -840, 72 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuShipRoot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "StartGame"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MenuShipRoot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -840, 72 ), Vector2( -840, 72 ), Vector2( 400, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuShipRoot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 0.5 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("FlyAwaySound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.25 )
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 1070.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_right = 1900.0
margin_bottom = 936.0
size_flags_vertical = 3

[node name="Filler" type="Control" parent="MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 1694.0
margin_bottom = 936.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1698.0
margin_right = 1900.0
margin_bottom = 936.0
custom_constants/separation = 50
alignment = 1

[node name="StartButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 379.0
margin_right = 202.0
margin_bottom = 443.0
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../../../../../VBoxContainer/HBoxContainer/PostCompoCheckbox")
text = "Start"

[node name="ExitButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 493.0
margin_right = 202.0
margin_bottom = 557.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../../../HBoxContainer2/GridContainer/MusicSlider")
focus_next = NodePath("../../../HBoxContainer2/GridContainer/MusicSlider")
focus_previous = NodePath("../StartButton")
text = "Quit"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_top = 940.0
margin_right = 1900.0
margin_bottom = 1060.0
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MainMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 630.0
margin_right = 1270.0
margin_bottom = 120.0
custom_constants/hseparation = 50
columns = 2

[node name="MusicLabel" type="Label" parent="MainMenu/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
margin_right = 190.0
margin_bottom = 58.0
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MainMenu/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
unique_name_in_owner = true
margin_left = 240.0
margin_top = 21.0
margin_right = 640.0
margin_bottom = 37.0
rect_min_size = Vector2( 400, 0 )
focus_neighbour_top = NodePath("../../../HBoxContainer/VBoxContainer/ExitButton")
focus_neighbour_bottom = NodePath("../SoundSlider")
focus_next = NodePath("../SoundSlider")
focus_previous = NodePath("../../../HBoxContainer/VBoxContainer/ExitButton")
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.8

[node name="SoundLabel" type="Label" parent="MainMenu/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
margin_top = 62.0
margin_right = 190.0
margin_bottom = 120.0
text = "Sound"

[node name="SoundSlider" type="HSlider" parent="MainMenu/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
unique_name_in_owner = true
margin_left = 240.0
margin_top = 83.0
margin_right = 640.0
margin_bottom = 99.0
rect_min_size = Vector2( 400, 0 )
focus_neighbour_top = NodePath("../MusicSlider")
focus_next = NodePath("../../../../../VBoxContainer/HBoxContainer/PostCompoCheckbox")
focus_previous = NodePath("../MusicSlider")
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.8

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_right = 0.975
anchor_bottom = 0.975
mouse_filter = 2
theme = ExtResource( 1 )

[node name="Control" type="Control" parent="MainMenu/VBoxContainer"]
margin_right = 1872.0
margin_bottom = 983.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
margin_top = 987.0
margin_right = 1872.0
margin_bottom = 1053.0
mouse_filter = 2
alignment = 2

[node name="PostCompoCheckbox" type="CheckBox" parent="MainMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 1499.0
margin_right = 1539.0
margin_bottom = 66.0
rect_min_size = Vector2( 40, 0 )
rect_pivot_offset = Vector2( 20, 33 )
focus_neighbour_left = NodePath("../../../MarginContainer/VBoxContainer/HBoxContainer2/GridContainer/SoundSlider")
focus_neighbour_top = NodePath("../../../MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ExitButton")
focus_next = NodePath("../../../MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartButton")
focus_previous = NodePath("../../../MarginContainer/VBoxContainer/HBoxContainer2/GridContainer/SoundSlider")

[node name="Label" type="Label" parent="MainMenu/VBoxContainer/HBoxContainer"]
margin_left = 1543.0
margin_top = 18.0
margin_right = 1872.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 10 )
text = "Post compo version"

[node name="MenuShipRoot" type="Node2D" parent="."]
position = Vector2( -840, 72 )

[node name="MenuShipLargeOffset" type="Node2D" parent="MenuShipRoot"]
unique_name_in_owner = true

[node name="MenuShipSmallOffset" type="Node2D" parent="MenuShipRoot/MenuShipLargeOffset"]
unique_name_in_owner = true

[node name="MenuShip" type="Sprite" parent="MenuShipRoot/MenuShipLargeOffset/MenuShipSmallOffset"]
unique_name_in_owner = true
position = Vector2( 468, 0 )
z_index = 1
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="MenuShipRoot/MenuShipLargeOffset/MenuShipSmallOffset/MenuShip"]
position = Vector2( -268, 22 )
rotation = 3.1168
z_index = 1
amount = 128
texture = ExtResource( 9 )
emission_shape = 1
emission_sphere_radius = 67.18
spread = 14.32
gravity = Vector2( 0, 0 )
initial_velocity = 2000.0
scale_amount = 4.79
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="Title" type="Node2D" parent="."]
position = Vector2( -99, -27 )

[node name="TitleRoot" type="Node2D" parent="Title"]
unique_name_in_owner = true
scale = Vector2( 0.7, 0.7 )

[node name="TitleAvoidRoot" type="Node2D" parent="Title/TitleRoot"]
unique_name_in_owner = true

[node name="AvoidBlur" type="Sprite" parent="Title/TitleRoot/TitleAvoidRoot"]
unique_name_in_owner = true
modulate = Color( 0.933333, 0.32549, 0.32549, 1 )
position = Vector2( -110, -543 )
texture = ExtResource( 6 )

[node name="Avoid" type="Sprite" parent="Title/TitleRoot/TitleAvoidRoot"]
position = Vector2( -110, -543 )
texture = ExtResource( 5 )

[node name="TitleAsteroidRoot" type="Node2D" parent="Title/TitleRoot"]
unique_name_in_owner = true

[node name="AsteroidBlur" type="Sprite" parent="Title/TitleRoot/TitleAsteroidRoot"]
unique_name_in_owner = true
modulate = Color( 0.933333, 0.32549, 0.32549, 1 )
position = Vector2( 586, -361.429 )
texture = ExtResource( 7 )

[node name="Asteroid" type="Sprite" parent="Title/TitleRoot/TitleAsteroidRoot"]
position = Vector2( 586, -361.429 )
texture = ExtResource( 4 )

[node name="StarSource" type="Node2D" parent="."]
position = Vector2( 400, -100 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/StartGame = SubResource( 2 )

[node name="FlyAwaySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -17.63
bus = "Sounds"

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="value_changed" from="MainMenu/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer/MusicSlider" to="." method="_on_Volume_changed"]
[connection signal="value_changed" from="MainMenu/MarginContainer/VBoxContainer/HBoxContainer2/GridContainer/SoundSlider" to="." method="_on_Volume_changed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/HBoxContainer/PostCompoCheckbox" to="." method="_on_PostCompoCheckbox_pressed"]
